text spakable issue troubleshooted

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="Left">Izquierda⏪:</string>
     <string name="Stop">Detener🛑 :</string>
     <string name="V">Vibrar📳:</string>
-    <string name="UE">UNIDAD EDUCATIVA SALESIANA ¨DON BOSCO¨</string>
+    <string name="UE">Universidad de las Fuerzas Armadas ¨ESPE¨</string>
+    <string name="settings">Settings</string>
+    <string name="bluetooth">Bluettoh</string>
+    <string name="entity">Enity</string>
 </resources>
